--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
 :root {
   --blanco: #ffffff;
-  --principal: rgba(109, 45, 45);
+  --principal: #1c1c1c;
+  --secudario: #212121;
   --amarillo: rgb(248, 252, 2);
   --negro: #000000;
+  --gris-claro: #d5d8dc;
   --font-family: 'Maven Pro', sans-serif;
 }
 
@@ -16,120 +18,185 @@ html {
   box-sizing: inherit;
 }
 body {
-  background-color: var();
+  background-color: var(--principal);
   font-family: var(--font-family);
   font-size: 1.6rem;
+}
+/**Globales**/
+.contenedor {
+  max-width: 150rem;
+  width: 90%;
+  margin: 0 auto;
+}
+a {
+  text-decoration: none;
 }
 h1,
 h2,
 h3 {
-  text-align: center;
-  font-weight: bold;
-  color: var(--principal);
+  font-family: var(--font-family);
+  line-height: 1.2;
 }
-.principal-parrrafo {
-  color: var(--blanco);
+h1 {
+  font-size: 7.8rem;
+}
+h2 {
+  font-size: 4rem;
+}
+h3 {
+  font-size: 3.2rem;
+}
+h4 {
+  font-size: 2.8rem;
+}
+img {
+  max-width: 100%;
+}
+
+/**Utilidades**/
+.no-margin {
+  margin: 0;
+}
+.no-padding {
+  padding: 0;
+}
+.centrar-texto {
   text-align: center;
 }
 
-em strong,
-p strong {
-  color: var(--amarillo);
-}
-/**Globales**/
-.contenedor {
-  max-width: 120rem;
-  width: 100%;
-  margin: 1rem auto;
-  padding: 5rem;
-}
-.principal-imagen {
+/**header**/
+.header {
   background-image: url(../img/barbershop-banner_1.jpg);
+}
+.header {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
   height: 60rem;
-  object-fit: cover;
+  /* background-color: rgb(0 0 0 / 70%); */
 }
-/**header**/
-.contenedor-header {
+.header__texto {
   text-align: center;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  color: var(--blanco);
+  margin-top: 5rem;
 }
 
 @media (min-width: 768px) {
-  .contenedor-header {
-    display: flex;
-    justify-content: space-between;
-    margin: 1rem;
+  .header__texto {
+    text-align: center;
+    margin-top: 15rem;
   }
 }
-.contenedor-logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+.barra {
+  padding-top: 4rem;
 }
-.contenedor-imagen {
-  width: 5rem;
-}
-
 @media (min-width: 768px) {
-  .contenedor-navegacion {
+  .barra {
     display: flex;
-    gap: 8rem;
+    justify-content: space-between;
     align-items: center;
   }
 }
-.contenedor-navegacion a {
-  color: var(--principal);
-  text-decoration: none;
+
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.logo h2 {
+  color: var(--blanco);
+}
+.logo__nombre {
+  color: var(--blanco);
   font-weight: bold;
-  font-size: 2rem;
-}
-.contenedor-navegacion a:hover {
-  background-color: var(--amarillo);
-}
-
-/**principal**/
-.principal {
-  background: var(--principal);
-}
-
-.items {
-  font-style: italic;
-}
-
-/***diferenciales*/
-.diferenciales {
-  background-color: #ffffff;
-  padding: 3rem;
-}
-.diferenciales ul {
   display: inline-block;
 }
-.diferenciales-segmentacion {
+.logo__imagen {
+  width: 5rem;
+}
+
+.navegacion_enlace {
+  display: block;
   text-align: center;
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: var(--blanco);
 }
 @media (min-width: 768px) {
-  .diferenciales-segmentacion {
+  .navegacion {
     display: flex;
     justify-content: space-between;
-  }
-  .diferenciales-imagen {
-    max-width: 50%;
+    gap: 3rem;
   }
 }
 
-.diferenciales-imagen {
-  width: 100%;
+@media (min-width: 768px) {
+  .contenido-principal {
+    display: grid;
+    grid-template-columns: calc(2, 50%);
+    column-gap: 4rem;
+  }
 }
 
-/**footer**/
-.principal-footer {
-  color: var(--principal);
+.principal {
+  background: var(--secudario);
+  color: var(--blanco);
+  padding: 15rem;
+}
+
+.entrada {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .entrada {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 2rem;
+  }
+}
+
+.entrada2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 2;
+  gap: 1rem;
+}
+.entrada2 .imagen:nth-child(1) {
+  grid-column: 1/2;
+}
+.entrada2 .imagen:nth-child(2) {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+.entrada2 .imagen:nth-child(3) {
+  grid-column: 2/3;
+  grid-row: 1/3;
+}
+
+/**Footer**/
+.site-footer {
+  border-top: 1px solid var(--gris-claro);
+  margin-top: 5rem;
+  padding-top: 5rem;
+}
+.site-footer h3 {
+  margin-bottom: 0.5rem;
+  color: var(--blanco);
+}
+.grid-footer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+}
+.footer-menu a {
+  display: block;
+}
+.copyright {
+  margin-top: 5rem;
   text-align: center;
-  font-weight: bold;
 }
