--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body {
 }
 a {
   text-decoration: none;
+  color: var(--blanco);
 }
 h1,
 h2,
@@ -38,7 +39,9 @@ h3 {
   line-height: 1.2;
 }
 h1 {
-  font-size: 7.8rem;
+  font-size: 60px;
+  font-weight: bold;
+  letter-spacing: 0rem;
 }
 h2 {
   font-size: 4rem;
@@ -49,7 +52,13 @@ h3 {
 h4 {
   font-size: 2.8rem;
 }
+p {
+  line-height: 1.5;
+  font-size: 1.9rem;
+}
 img {
+  max-width: 100%;
+  height: auto;
   max-width: 100%;
 }
 
@@ -63,6 +72,9 @@ img {
 .centrar-texto {
   text-align: center;
 }
+.minuscula {
+  text-transform: uppercase;
+}
 
 /**header**/
 .header {
@@ -73,7 +85,7 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 60rem;
+  height: 73rem;
   /* background-color: rgb(0 0 0 / 70%); */
 }
 .header__texto {
@@ -104,6 +116,7 @@ img {
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  max-width: 200rem;
 }
 .logo h2 {
   color: var(--blanco);
@@ -127,28 +140,33 @@ img {
 @media (min-width: 768px) {
   .navegacion {
     display: flex;
-    justify-content: space-between;
-    gap: 3rem;
+    justify-content: space-evenly;
+    gap: 5rem;
   }
 }
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   .contenido-principal {
     display: grid;
     grid-template-columns: calc(2, 50%);
     column-gap: 4rem;
   }
-}
+} */
 
 .principal {
   background: var(--secudario);
   color: var(--blanco);
-  padding: 15rem;
+  padding: 15rem 0;
 }
 
 .entrada {
+  max-width: 150rem;
   display: flex;
   flex-direction: column;
+}
+.entrada1 {
+  flex-basis: 100%;
+  padding: 0 2rem;
 }
 
 @media (min-width: 768px) {
@@ -156,26 +174,35 @@ img {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 2rem;
+    gap: 5rem;
   }
 }
-
-.entrada2 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 2;
-  gap: 1rem;
-}
-.entrada2 .imagen:nth-child(1) {
-  grid-column: 1/2;
-}
-.entrada2 .imagen:nth-child(2) {
-  grid-column: 1/2;
-  grid-row: 2/3;
-}
-.entrada2 .imagen:nth-child(3) {
-  grid-column: 2/3;
-  grid-row: 1/3;
+@media (min-width: 768px) {
+  .entrada2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 2;
+    gap: 2rem;
+    flex-basis: 100%;
+  }
+  .entrada2 .imagen:nth-child(1) {
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+  .entrada2 .imagen:nth-child(2) {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+  .entrada2 .imagen:nth-child(3) {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+  .imagen1,
+  .imagen2,
+  .imagen3 {
+    min-height: 100%;
+    min-width: 100%;
+  }
 }
 
 /**Footer**/
@@ -184,19 +211,32 @@ img {
   margin-top: 5rem;
   padding-top: 5rem;
 }
+.grid-footer {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding-left: 10rem;
+}
+
+@media (min-width: 768px) {
+  .grid-footer {
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    gap: 2rem;
+  }
+}
 .site-footer h3 {
   margin-bottom: 0.5rem;
   color: var(--blanco);
 }
-.grid-footer {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
-}
+
 .footer-menu a {
   display: block;
 }
+
 .copyright {
   margin-top: 5rem;
   text-align: center;
+  color: var(--blanco);
 }
