Corrigiendo padding footer en 768px

--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,7 @@ img {
     justify-content: space-evenly;
     align-items: flex-start;
     gap: 2rem;
+    padding-left: 0;
   }
 }
 .site-footer h3 {
